<resources>
    <string name="today">今日</string>
    <string name="lastList">往期列表</string>
    <string name="discussMeetting">讨论集会</string>
    <string name="myFavorities">我的收藏</string>
    <string name="myComments">我的评论</string>
    <string name="settings">设置</string>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="pref_key_translate">translate</string>
    <string name="preference_key_iat_rate">iat_rate</string>
    <string name="preference_title_iat_rate">录音采样率</string>
    <string name="preference_default_iat_rate">rate16k</string>
    <string name="preference_default_isr_engine">sms</string>
    <string name="preference_default_iat_engine">sms</string>
    <string name="preference_dialog_title_isr_engine">选择识别引擎</string>
    <string name="preference_key_isr_rate">isr_rate</string>
    <string name="preference_title_isr_rate">识别采样率</string>
    <string name="preference_default_poi_province">全选</string>
    <string name="preference_default_poi_city">全选</string>
    <string name="preference_key_poi_province">poi_province</string>
    <string name="preference_dialog_title_poi_province">选择地图搜索省份</string>
    <string name="preference_key_poi_city">poi_city</string>
    <string name="preference_title_poi_city">地图搜索城市</string>
    <string name="app_id">59acb492</string>
    <string name="preference_key_iat_engine">iat_engine</string>
    <string name="preference_dialog_title_iat_engine">选择听写引擎</string>
    <string-array name="preference_entries_iat_engine">
        <item>短信转写</item>
        <item>地图搜索</item>
        <item>热词搜索</item>
        <item>视频搜索</item>
    </string-array>
    <string-array name="preference_values_iat_engine">
        <item>sms</item>
        <item>poi</item>
        <item>vsearch</item>
        <item>video</item>
    </string-array>
    <string name="preference_title_iat">听写设置</string>
    <string-array name="preference_values_poi_city">
        <item>全选</item>
    </string-array>
    <string name="preference_title_iat_engine">听写引擎</string>
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="dwa_entries">
        <item>开启</item>
        <item>关闭</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_title_translate">翻译</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="app_name">镖王</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="back"></string>
    <string name="title">镖王</string>
    <string name="sender">寄件人</string>
    <string name="addressee">收件人</string>
    <string name="onkeysend">一键快递</string>
    <string name="cometopick">来抢单吧</string>
    <string name="downwindcourier">顺风专递</string>
    <string name="downwindfreight">顺风货运</string>
    <string name="publishing_tasks">发布任务</string>
    <string name="accept_tasks">接受任务</string>
    <string name="sendexp">发快递</string>
    <string name="sendfreight">发货运</string>
    <string name="sendtasks">派任务</string>
    <string name="pleaseenter_username">请输入您的手机号</string>
    <string name="username">请输入您的手机号</string>
    <string name="userpassword">密码</string>
    <string name="findpassword">找回密码</string>
    <string name="login">登  录</string>
    <string name="registe">注册</string>
    <string name="hurryregiste">快速注册</string>
    <string name="thirdpartylogin">第三方账号快速登录</string>
    <string name="registemobile">手机号</string>
    <string name="introducer">请输入推荐人的手机号(选填)</string>
    <string name="registephonenumber">11位手机号</string>
    <string name="registesmscode">验证码</string>
    <string name="registecode">4位数字</string>
    <string name="registegetsmscode">获取验证码</string>
    <string name="nextstep">下一步</string>
    <string name="next1">注册1/2</string>
    <string name="next2">注册2/2</string>
    <string name="next3">完善实名信息</string>
    <string name="setpwd">请设置密码</string>
    <string name="password">密码</string>
    <string name="pwdlength">6-20位字母和数字组合</string>
    <string name="setimg">点击设置头像</string>
    <string name="setname">请输入昵称</string>
    <string name="complete">完成</string>
    <string name="replaceimage">更换头像</string>
    <string name="camera">拍照</string>
    <string name="photofromalbum">从相册上传</string>
    <string name="cancel">取消</string>
    <string name="jump">跳过</string>
    <string name="findnext1">找回密码1/2</string>
    <string name="findnext2">找回密码2/2</string>
    <string name="sendperson">寄件人信息</string>
    <string name="sendpersonname">寄件人姓名</string>
    <string name="sendpersonmobile">寄件人手机号</string>
    <string name="sendpersonaddress">详细地址</string>
    <string name="getaddress">获取定位</string>
    <string name="addcouriers">添加快递员</string>
    <string name="oksend">确认发布</string>
    <string name="titlecouriername">快递员库</string>
    <string name="expname">顺丰快递</string>
    <string name="score">评分:</string>
    <string name="couriername">姓名:</string>
    <string name="couriernamesl">张三丰</string>
    <string name="couriermobile">手机号:</string>
    <string name="couriermobilesl">13800138000</string>
    <string name="name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名:</string>
    <string name="mobile">手&#160;&#160;机&#160;&#160;号:</string>
    <string name="expnam">快递公司:</string>
    <string name="btnadd">添加</string>
    <string name="couriermessage">快递员信息</string>
    <string name="selectcouriers">可选快递员</string>
    <string name="selectcouriersname">请输入快递员姓名</string>
    <string name="selectcouriersmobile">请输入快递员手机号</string>
    <string name="selectexpname">请选择快递公司</string>
    <string name="expName">快递公司</string>
    <string name="downwindtitle">顺风专递</string>
    <string name="downwindsendaddress">寄件地址：</string>
    <string name="downwindsendaddressinput">请输入寄件地址</string>
    <string name="downwindrecaddress">收件地址：</string>
    <string name="downwindrecaddressinput">请输入收件地址</string>
    <string name="downwindmathweight">重&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;量：</string>
    <string name="downwindmathweightinput">请输入物品重量</string>
    <string name="mathweightinput">kg</string>
    <string name="submitordertitle">提交订单</string>
    <string name="submitordertotalmoney">总价：</string>
    <string name="submitorderdistance">距离：</string>
    <string name="submitordertotalweight">总重：</string>
    <string name="submitorderremarks">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注：</string>
    <string name="submitorderremarksinput">请输入备注（非必填项）</string>
    <string name="submitorderpaymoney">还需支付：</string>
    <string name="submitorderyuan">元</string>
    <string name="submitorderpayyuan">0000</string>
    <string name="submitordertotalsendername">寄件人姓名</string>
    <string name="submitordertotalsendermobile">寄件人手机号码</string>
    <string name="submitordertotalrecname">收件人姓名</string>
    <string name="submitordertotalrecmobile">收件人手机号码</string>
    <string name="submitordertotaladdress">xxx市xxx区xxx路xxx楼</string>
    <string name="usercnetername">个人中心</string>
    <string name="cneterusername">用户名</string>
    <string name="trake">充值</string>
    <string name="card">现金券</string>
    <string name="wallet">钱包</string>
    <string name="ecoin">积分</string>
    <string name="ordermanagement">订单管理</string>
    <string name="myexp">我的快递</string>
    <string name="myfreight">我的物流</string>
    <string name="mytasks">我的任务</string>
    <string name="certificationcenter">认证中心</string>
    <string name="roleAuthentication">角色认证</string>
    <string name="courierauthentication">快递员</string>
    <string name="incomeOfUnders">推广收入</string>
    <string name="logisticsdriverauthentication">物流司机</string>
    <string name="orderabout">系统设置</string>
    <string name="logoff">切换账户</string>
    <string name="resetpwd">重置密码</string>
    <string name="about">关于</string>
    <string name="balancemoney">0.00</string>
    <string name="balancemoney2">元</string>
    <string name="cardtitle">我的现金券</string>
    <string name="wallettitle">钱包</string>
    <string name="picktitle">抢单大厅</string>
    <string name="pickaddress">北京</string>
    <string name="addresstitle">地&#160;&#160;址</string>
    <string name="addresshint">请输入地址关键字</string>
    <string name="usethisaddress">使用当前位置</string>
    <string name="thisaddress">生命科学园北清创意园3-2-210室</string>
    <string name="addresslist">地址列表</string>
    <string name="mywallettitle">我的钱包</string>
    <string name="wallethistory">流水详情</string>
    <string name="cometopicktitle">来抢单吧</string>
    <string name="cometopicksender">寄件人信息</string>
    <string name="cometopickaddressee">收件人信息</string>
    <string name="cometopicksendername">姓&#160;&#160;名</string>
    <string name="cometopicksendermobile">手机号</string>
    <string name="cometopicksenderaddress">地&#160;&#160;址：</string>
    <string name="cometopicksenderaddresslist">请选择地址</string>
    <string name="cometopickmathname">物品名称：</string>
    <string name="cometopickmathnameinput">请输入物品名称</string>
    <string name="userinfotitle">个人信息</string>
    <string name="userinfoname">姓名</string>
    <string name="inputuserinfoname">请输入姓名</string>
    <string name="userinfoidcardnumber">身份证号</string>
    <string name="inputuserinfoidcardnumber">请输入身份证号</string>
    <string name="uploadimage">请上传手持身份证照片</string>
    <string name="userinfonotice">温馨提示:根据公安部发快递实名制要求,请输入真实的姓名和身份证号</string>
    <string name="scan_tip">请将条码置于扫描框内,系统会自动扫描</string>
    <string name="scan_retry">扫描出错，请重试</string>
    <string name="scan_title">正在扫描...</string>
    <string name="scan_faile">扫描失败!</string>
    <string name="ecointitle">我的积分</string>
    <string name="ecoinnow">当前积分:</string>
    <string name="ecoinhistory">历史明细</string>
    <string name="ecoinexchange">积分说明</string>
    <string name="ecoinshope">积分商城</string>
    <string name="ecoinmoney">0</string>
    <string name="ecoinhistoryway">邀请注册</string>
    <string name="ecoinhistorymoney">100</string>
    <string name="ecoinhistorytime">2016-03-16 10:09:11</string>
    <string name="messagetitle">我的消息</string>
    <string name="dialogtitle">温馨提示</string>
    <string name="dialogok">确定</string>
    <string name="dialogcancel">取消</string>
    <string name="know">不连接</string>
    <string name="goset">去连接</string>
    <string name="nameandpwdnotnull">用户名或密码不能为空</string>
    <string name="mobileandsmscodenotnull">手机号或验证码不能为空</string>
    <string name="mobileisnotvolid">请输入正确的手机号码</string>
    <string name="smscodeisnotvolid">请输入正确的4位数字验证码</string>
</resources>