<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graywhite"
    android:orientation="vertical" >

    <com.hex.express.iwant.views.TitleBarView
        android:id="@+id/tbv_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_headportrait"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/uploadimage"
            android:textColor="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/userinfoname" />

        <EditText
            android:id="@+id/edt_userinfoname"
            android:background="@drawable/bg_white_rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:inputType="textPersonName"
            android:gravity="center|left"
            android:hint="@string/inputuserinfoname"
            android:padding="10dp"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/userinfoidcardnumber" />

        <EditText
            android:id="@+id/edt_userinfoidcardnumber"
            style="@style/text_normal_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_white_rounded"
            android:gravity="center|left"
            android:hint="@string/inputuserinfoidcardnumber"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/userinfonotice"
        android:textColor="@color/orange"
        android:textSize="9sp" />

    <Button
        android:id="@+id/btn_complete"
        style="@style/btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/complete" />

</LinearLayout>