<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3.0" >

        <TextView
            android:id="@+id/txtRulename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:paddingLeft="10.0dip"
            android:paddingTop="20.0dip"
            android:text="@string/ecoinhistoryway"
            android:textSize="18.0sp" />

        <TextView
            android:id="@+id/txthisEcoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2.0"
            android:gravity="right"
            android:paddingRight="10.0dip"
            android:paddingTop="20.0dip"
            android:text="@string/ecoinhistorymoney"
            android:textSize="18.0sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_Time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingBottom="10.0dip"
        android:paddingLeft="10.0dip"
        android:text="@string/ecoinhistorytime"
        android:textSize="14.0sp" />

</LinearLayout>