<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graywhite"
    android:orientation="vertical" >

    <com.hex.express.iwant.views.TitleBarView
        android:id="@+id/tbv_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:text="@string/pleaseenter_username"
        android:textColor="@color/grayslate"
        android:textSize="15sp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        style="@style/text_normal_box"
        android:layout_width="fill_parent"
        android:layout_height="91dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_white_rounded"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:background="@color/transparent"
                android:text="@string/registemobile"
                android:textSize="14sp"
                android:gravity="center|left" />

            <EditText
                android:id="@+id/edt_registephonenumber"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:background="@color/transparent"
                android:hint="@string/registephonenumber"
                android:gravity="center|left"
                android:inputType="phone"
                android:maxLength="11"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/gray_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:background="@color/transparent"
                android:text="@string/registesmscode"
                android:textSize="14sp"
                android:gravity="center|left" />
            
            <EditText
                android:id="@+id/edt_registecode"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1.0"
                android:background="@color/transparent"
                android:hint="@string/registecode"
                android:inputType="number"
                android:gravity="left|center"
                android:maxLength="4"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_getsmscode"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@color/transparent"
                android:text="@string/registegetsmscode"
                android:textColor="@color/orange"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_nextstep"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:text="下一步"
        android:background="@drawable/selector_orange_to_gray_rouded"
        android:textColor="@drawable/selector_text_white_to_gray" />

</LinearLayout>