<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_margin="10dp"
    android:background="@drawable/circle_edge"
    android:descendantFocusability="blocksDescendants" >

    <ImageView
        android:id="@+id/img_expimag"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/wu_cou" />

    <RelativeLayout
        android:id="@+id/lout1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="17dp"
        android:layout_toRightOf="@+id/img_expimag" >

        <TextView
            android:id="@+id/txt_expname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expname"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/txt_expname"
            android:layout_below="@id/txt_expname"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/couriername"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/txt_couriername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/couriernamesl"
                android:textSize="10sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
  		android:layout_marginTop="8dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="45dp" >

        <LinearLayout
            android:id="@+id/linear_out1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txt_couriersscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:gravity="right|center"
                android:text="@string/score"
                android:textSize="10sp" />

            <RatingBar
                android:id="@+id/rab_couriersscore"
                style="@style/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="2.60"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="3.5"
                android:stepSize="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_out1"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|center"
                android:text="@string/couriermobile"
                android:textSize="10sp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/txt_couriermobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|center"
                android:text="@string/couriermobilesl"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/image_send"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"
        android:background="@drawable/feiji"
        android:visibility="invisible" />

</RelativeLayout>